# stm32h747-gameboy

./: .gitignore  .mxproject  .project  README.md  stm32h747-gameboy.ioc
CM4/: .cproject  .project
CM4/Core/Inc/: main.h
CM4/Core/Src/: main.c
CM4/Debug/: makefile  objects.list  stm32h747-gameboy_CM4.elf  stm32h747-gameboy_CM4.list  stm32h747-gameboy_CM4.map
CM7/: .cproject  .project  STM32H747XIHX_FLASH.ld  STM32H747XIHX_RAM.ld  stm32h747-gameboy_CM4.launch  stm32h747-gameboy_CM7.launch
CM7/Core/Inc/: Alleyway.gb.h  KDL.gb.h  SML.gb.h  Test10.gb.h  Test11.gb.h  Test2.gb.h  Test3.gb.h  Test4.gb.h  Test5.gb.h  Test6.gb.h  Test7.gb.h  Test8.gb.h  Test9.gb.h  Tetris.gb.h  audio_sample.bin.h  bgbtest.gb.h  cpu_instrs.gb.h  dmg_boot.bin.h  gbMBC.h  gbcpu.h  gbfunctions.h  gbmemory.h  gbpapu.h  gbppu.h  instr_timing.gb.h  main.h  stm32h7_display.h  stm32h7xx_hal_conf.h
CM7/Core/Src/: gbMBC.c  gbcpu.c  gbfunctions.c  gbmemory.c  gbpapu.c  gbppu.c  main.c  stm32h7_display.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c
CM7/Core/Startup/: startup_stm32h747xihx.s
CM7/Debug/: makefile  objects.list  sources.mk  stm32h747-gameboy_CM7.elf  stm32h747-gameboy_CM7.list  stm32h747-gameboy_CM7.map
CM7/Debug/Utilities/: stm32_lcd.d  stm32_lcd.su  subdir.mk
CM7/doc/html/: _alleyway_8gb_8h.html  _alleyway_8gb_8h_source.html  _k_d_l_8gb_8h.html  _k_d_l_8gb_8h_source.html  _s_m_l_8gb_8h.html  _s_m_l_8gb_8h_source.html  annotated.html  annotated_dup.js  audio__sample_8bin_8h.html  audio__sample_8bin_8h.js  (+111 more)
UnitTesting/: CMakeLists.txt  gbmbcTest.c  gbmemoryTest.c  gbppuTest.c  main.c
(+287 files in other folders)
